Edited Climbing for Mark

--- a/inaction/index.html
+++ b/inaction/index.html
@@ -297,7 +297,7 @@ An experience of a lifetime and a personal win for me and my Dogs.
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
                             <h2>Mark Arrow</h2>
-                            <p class="item-intro text-muted">Climbing Rock and Ice</p>
+                            <p class="item-intro text-muted">Climber of Rock and Ice</p>
                             <img class="img-responsive img-centered" src="img/portfolio/mark-arrow-bio.png" alt="">
                             <p>Mark Arrow is a world renowned rock climber and a 40 year veteran of outdoor adventuring. He has climbed mountains, rocks and ice all over the globe, from New York's Keene Valley to The Himalayas.</p><p>Mark enjoys guiding other climbers and introducing newcomers to the sport. He divides his time between professional guide work with Rock and Road Guides and his masonry business, Arrow Masonry, where he is a fifth generation stonemason.</p>
                             <p><a href="http://rockandroadguides.com/">Mark Arrow Guide Services</a>.</p>
