--- a/inaction/index.html
+++ b/inaction/index.html
@@ -236,7 +236,7 @@
                             <h2>Kathy Karlo</h2>
                             <p class="item-intro text-muted">Rock Climbing Enthusiast</p>
                             <img class="img-responsive img-centered" src="img/portfolio/kathykarlo-bio.png" alt="">
-                            <p>Kathy Karlo is a rock climber based out of Brooklyn, NY. Her love of rock and ice has been a life changing experience. She encourages anyone and everyone to try it. Her belief is that climbing a rock is so much more than that... it's a life journey that forever tests the limits of possibility!</p>
+                            <p>Kathy Karlo is a rock climber based out of Brooklyn, NY. Her love of rock and ice has been a life changing experience. She encourages anyone and everyone to try it. Her belief is that climbing a rock is so much more than that... it's a life journey that forever tests the limits of possibility!!!</p>
                             <p>
                                 <strong>Kathy Karlos Blog</strong><a href="http://www.fortheloveofclimbing.com"><br>For The Love Of Climbing</a></p>
                             
