--- a/inaction/index.html
+++ b/inaction/index.html
@@ -341,12 +341,12 @@ An experience of a lifetime and a personal win for me and my Dogs.
                             <h2>Dennis Plato</h2>
                             <p class="item-intro text-muted"> Appalachian Trail Hike</p>
                             <img class="img-responsive img-centered" src="img/portfolio/dennis-plato-bio.jpg" alt="">
-                            <p>Hey! Name’s Dennis. I’m a Boston-based lover of hiking, cycling, and generally being outside.</p><p> In the summer of 2008, I cycled 3,600 miles from North Carolina to California. After that, I worked for six years in financial services.</p><p> 
+                            <p>Hey! Name's Dennis. I'm a Boston-based lover of hiking, cycling, and generally being outside.</p><p> In the summer of 2008, I cycled 3,600 miles from North Carolina to California. After that, I worked for six years in financial services.</p><p> 
 
-Biking was more fun, so I just turned in my notice. On April 28th I’ll be taking the first of many steps on my next big adventure: an attempted thru-hike of the 2,180 mile long Appalachian trail. I couldn’t be more excited to take it on, and I’m honored to be doing so as part of WoolxinAction! I will definitely be putting this clothing to the test!
+Biking was more fun, so I just turned in my notice. On April 28th I'll be taking the first of many steps on my next big adventure: an attempted thru-hike of the 2,180 mile long Appalachian trail. I couldn't be more excited to take it on, and I'm honored to be doing so as part of WoolxinAction! I will definitely be putting this clothing to the test!
 
 </p>
-                            <p><a href="http://www.thebusquestion.com/">Dennis Plato Blog</a>.</p>
+                            <p><a href="http://www.thebusquestion.com/">Dennis Plato's Blog</a>.</p>
 
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Bio</button>
                         </div>
