Add Photo Credit

--- a/inaction/index.html
+++ b/inaction/index.html
@@ -75,7 +75,7 @@
             <div class="intro-text">
                 <div class="intro-lead-in">Welcome To</div>
                 <div class="intro-heading">Team Woolx</div>
-                <div class="credit">Woolx Team Member <a href="http://fortheloveofclimbing.com/">Kathy Karlo</a></div>
+                <div class="credit">Woolx Team Member <a href="http://fortheloveofclimbing.com/">Kathy Karlo</a><p>Photo By Jared O'Brien </p></div>
                 
             </div>
         </div>
