--- a/inaction/index.html
+++ b/inaction/index.html
@@ -416,7 +416,7 @@ Biking was more fun, so I just turned in my notice. On April 28th I'll be taking
                             <h2>Paulina Dao</h2>
                             <p class="item-intro text-muted"> All-Around Adventurer</p>
                             <img class="img-responsive img-centered" src="img/portfolio/paulina-dao-bio.jpg" alt="">
-                            <p>Paulina is an all-around adventurer with a home base in San Francisco, CA. From hiking to climbing to mountaineering, she tries to do it all, and writes about it on her blog at Little Grunts. <p>When she’s not outside, you can find her cuddling with her cat, baking all the things, or writing code for her day job.</p>
+                            <p>Paulina is an all-around adventurer with a home base in San Francisco, CA. From hiking to climbing to mountaineering, she tries to do it all, and writes about it on her blog at Little Grunts. <p>When she's not outside, you can find her cuddling with her cat, baking all the things, or writing code for her day job.</p>
                             <p><a href="http://littlegrunts.com/">Paulina Dao's Blog</a>.</p>
                             
                             <p><a href="https://www.facebook.com/littlegrunts">Paulina Dao on Facebook</a>.</p>
